--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 
 .skill-card {
   width: 80%;
-  padding: 20px;
+  padding: 1.25vw;
   background-color: transparent;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   cursor: pointer;
@@ -58,7 +58,7 @@
   transform: translateX(-50%) translateY(-50%) scale(3);
 }
 .skill-card:hover .skill-card__body {
-  height: 250px;
+  height: 36vh;
 }
 .skill-card:hover .skill-card__body .skill-card__knowledge li {
   -webkit-transform: translateX(0);
@@ -95,7 +95,7 @@
 .skill-card .skill-card__header {
   position: relative;
   background-color: transparent;
-  height: 170px;
+  height: 25vh;
   margin: -20px -20px 20px -20px;
   -webkit-transition: height 0.5s;
   transition: height 0.5s;
@@ -143,4 +143,9 @@
   transition-delay: 0.5s;
   -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
+}
+
+.work-experience {
+  margin: 0 auto;
+  color: white;
 }
