--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,9 @@
 .skill-card:hover .skill-card__body {
   height: 36vh;
 }
+.skill-card:hover .exp-skill {
+  height: 75vh;
+}
 .skill-card:hover .skill-card__body .skill-card__knowledge li {
   -webkit-transform: translateX(0);
   transform: translateX(0);
@@ -136,6 +139,7 @@
   color: white;
 }
 .skill-card .skill-card__body .skill-card__knowledge li {
+  font-size: 110%;
   margin-top: 5px;
   -webkit-transition-duration: 0;
   transition-duration: 0;
@@ -148,4 +152,249 @@
 .work-experience {
   margin: 0 auto;
   color: white;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  background-color: #F3F5F6;
+  color: #6050E62;
+  height: 100vh;
+}
+
+.btn {
+  display: inline-block;
+  vertical-align: middle;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  outline: 0;
+  border: none;
+}
+
+.btn--outline {
+  background: transparent;
+  border: 2px solid #A1A5A8;
+  color: #A1A5A8;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  min-width: 7.5rem;
+  border-radius: 1.5rem;
+  transition: all 0.2s ease-in;
+}
+
+.btn--outline:hover {
+  background-color: #FF9908;
+  border-color: #FF9908;
+  color: #FFFFFF;
+}
+
+.card {
+  background-color: transparent;
+  color: white;
+  padding: 2rem;
+  max-width: 400px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  margin: 0 20px;
+}
+
+.card:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+}
+
+.card__title {
+  clear: both;
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 1em;
+  margin-bottom: 0.75rem;
+}
+
+.card__description {
+  margin: 0 0 0.75rem;
+  font-weight: 300;
+  line-height: 1.4;
+  word-break: break-word;
+}
+
+.card__icon {
+  overflow: hidden;
+  height: 2rem;
+  width: 2rem;
+  margin-bottom: 1.5rem;
+  float: left;
+}
+
+.card__icon svg {
+  width: 100%;
+  height: 100%;
+;
+}
+
+.card__ribbon {
+  display: block;
+  float: right;
+  background-color: #A1A5A8;
+}
+
+.card__ribbon:hover {
+  background-color: #FF9908;
+}
+
+.card__ribbon:after {
+  border-color: #A1A5A8;
+}
+
+.card__ribbon:hover:after {
+  border-color: #FF9908;
+  border-bottom-color: transparent;
+}
+
+.ribbon {
+  box-sizing: border-box;
+  position: relative;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 10px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.ribbon:after {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 0;
+  border-style: solid;
+  border-width: 5px 10px 5px 10px;
+  border-bottom-color: transparent;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.contact-card-container {
+  width: 100%;
+  position: relative;
+  transition: transform 1s ease;
+  transform-style: preserve-3d;
+  transform: perspective(1000px) rotateY(0deg);
+}
+.contact-card-container.flipped {
+  transform: perspective(1000px) rotateY(180deg);
+}
+.contact-card-container.flipped .data {
+  z-index: 1;
+}
+
+.contact-card {
+  background-color: #fff;
+  width: 100%;
+  padding: 20px;
+  border-radius: 1px;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  transform-style: preserve-3d;
+}
+.contact-card .title-container {
+  display: flex;
+  align-items: center;
+}
+.contact-card .title-container .title {
+  flex: 1;
+  margin: 0;
+  font-weight: bold;
+  text-align: center;
+}
+.contact-card .toggle-button {
+  position: absolute;
+  border: none;
+  background: #fff;
+  padding: 5px 10px;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  top: 0;
+  right: 0;
+}
+.contact-card .toggle-button img {
+  width: 100%;
+  height: auto;
+}
+.contact-card.card-front {
+  position: relative;
+}
+.contact-card.card-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(180deg);
+}
+
+/**
+ * Custom CSS based on the content. You can change the below one as per your needs
+ */
+.my-form {
+  width: 600px;
+  margin: 10px 0;
+}
+.my-form .field {
+  margin: 15px 0;
+}
+.my-form .field label {
+  display: block;
+  line-height: 1.5;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 5px;
+  opacity: 0.9;
+}
+.my-form .field input,
+.my-form .field textarea {
+  font-size: 1.2rem;
+  font-weight: 300;
+  width: 100%;
+  max-width: 400px;
+  line-height: 1;
+  padding: 10px 10px;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px #cccccc05;
+  border: 1px solid #ccc;
+}
+.my-form .field textarea {
+  max-width: 500px;
+}
+.my-form button {
+  background-color: #406ded;
+  color: #fff;
+  font-size: 1.2rem;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.social {
+  background: #00A0FF;
+  width: 10%;
+  text-align: center;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.list-unstyled a {
+  font-size: 50%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50%;
 }
