--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
   transform: translateX(-50%) translateY(-50%) scale(3);
 }
 .skill-card:hover .skill-card__body {
-  height: 36vh;
+  height: 300px;
 }
 .skill-card:hover .exp-skill {
   height: 600px;
@@ -258,7 +258,7 @@ body {
   border-bottom-color: transparent;
 }
 
-.ribbon {
+.ribbon, .ribbon2 {
   box-sizing: border-box;
   position: relative;
   width: 20px;
@@ -275,6 +275,21 @@ body {
   left: 0;
   border-style: solid;
   border-width: 5px 10px 5px 10px;
+  border-bottom-color: transparent;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.ribbon2:after {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 0;
+  border-style: solid;
+  border-width: 5px 10px 5px 10px;
+  border-top-color: #FF9908;
+  border-left-color: #FF9908;
+  border-right-color: #FF9908;
   border-bottom-color: transparent;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
